--- a/PageRank/pom.xml
+++ b/PageRank/pom.xml
@@ -61,6 +61,7 @@
     <sourceDirectory>src/main/scala</sourceDirectory>
     <testSourceDirectory>src/test/scala</testSourceDirectory>
     <plugins>
+    <!-- Main Class -->
       <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jar-plugin</artifactId>
