--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-input/
-output/
-givenFiles/
-PageRank/
-PageRankScala/target/
-PageRankScala/project/
-PageRankScala/.idea/
+# Default ignored files
+# /shelf/
+# /workspace.xml
+# # Datasource local storage ignored files
+# /dataSources/
+# /dataSources.local.xml
+# # Editor-based HTTP Client requests
+# /httpRequests/
+*
+!.gitignore
+!PageRankScala/src/main/scala/PageRank.scala
