--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@
 # /httpRequests/
 *
 !.gitignore
-!PageRankScala/src/main/scala/PageRank.scala
+!*/PageRankScala/src/main/scala/PageRank.scala
+!README.md
+!*/PageRankScala/build.sbt
